<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C82525"
    android:textAlignment="center"
    android:textColorHint="#757575"
    tools:context=".PlaningActivity">


    <Button
        android:id="@+id/add_exercise_buttonID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_exercise"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.354" />

    <Button
        android:id="@+id/back_buttonID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/add_exercise_buttonID"
        app:layout_constraintVertical_bias="0.846" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="392dp"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.823">

        <EditText
            android:id="@+id/add_nameID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#F8F8F8"
            android:ems="10"
            android:hint="@string/exercise_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/add_repsID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/number_of_reps"
            android:inputType="number"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/add_restID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/time_of_rest"
            android:inputType="number"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="#757575" />
    </LinearLayout>

    <Button
        android:id="@+id/save_buttonID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="@+id/back_buttonID"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/back_buttonID"
        app:layout_constraintTop_toTopOf="@+id/back_buttonID"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/LL_for_checkboxID"
        android:layout_width="409dp"
        android:layout_height="63dp"
        android:background="#634646"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.963">

        <CheckBox
            android:id="@+id/cb_1_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
            android:text="@string/Monday2"
            android:textAlignment="center" />

        <CheckBox
            android:id="@+id/cb_2_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
            android:text="@string/Tuesday2"
            android:textAlignment="center" />/>

        <CheckBox
            android:id="@+id/cb_3_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
            android:text="@string/Wednesday2"
            android:textAlignment="center" />/>

        <CheckBox
            android:id="@+id/cb_4_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
            android:text="@string/Thursday2"
            android:textAlignment="center" />/>

        <CheckBox
            android:id="@+id/cb_5_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
            android:text="@string/Friday2"
            android:textAlignment="center" />/>

        <CheckBox
            android:id="@+id/cb_6_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
            android:text="@string/Saturday2"
            android:textAlignment="center" />/>

        <CheckBox
            android:id="@+id/cb_7_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="?android:attr/listChoiceIndicatorMultiple"
            android:text="@string/Sunday2"
            android:textAlignment="center" />/>
    </LinearLayout>

    <!--
    <ScrollView
        android:id="@+id/scrollviewID"
        android:layout_width="371dp"
        android:layout_height="381dp"
        android:contentDescription="Enter How Much Cookies You Want"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/LL_for_checkboxID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.312">

        <LinearLayout
            android:id="@+id/LinearLayoutID"
            android:layout_width="371dp"
            android:layout_height="381dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/RL_for_textsID"
                android:layout_width="100pt"
                android:layout_height="381dp">

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/RL_for_ButtomsID"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
-->
    <ScrollView

        android:layout_width="409dp"
        android:layout_height="383dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/LL_for_checkboxID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <RelativeLayout
                android:id="@+id/RL_for_textsID"
                android:layout_width="100pt"
                android:layout_height="match_parent">

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/RL_for_ButtomsID"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>